--- a/index.html
+++ b/index.html
@@ -1,49 +1,25 @@
+<!DOCTYPE html>
 <html>
-<head>
-<title>Blackjack in Javascript</title>
-<link rel="stylesheet" type="text/css" href="style.css">
-<script type="text/javascript" src="Card.js"></script>
-<script type="text/javascript" src="DisplayedCard.js"></script>
-<script type="text/javascript" src="js/prototype.js"></script>
-<script type="text/javascript" src="js/scriptaculous.js?load=effects"></script>
-<script src="script.js"></script>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Black Jack</title>
+        <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
+    </head>
 
-</head>
-<body>
-   <table class="game-container" align="center" cellpadding="0" cellspacing="10" border="0">
-     <tr>
-       <td>
-         <div style="position: absolute; left: 20px; top: 15px;" class="text-large">Dealer's cards:</div>
-         <div id="dealer1" class="card"></div>
-         <div id="dealer2" class="card"></div>
-         <div id="dealer3" class="card"></div>
-         <div id="dealer4" class="card"></div>
-         <div id="dealer5" class="card"></div>
-         <div style="position: absolute; left: 20px; top: 210px;" class="text-large">Your cards:</div>
-         <div id="player1" class="card"></div>
-         <div id="player2" class="card"></div>
-         <div id="player3" class="card"></div>
-         <div id="player4" class="card"></div>
-         <div id="player5" class="card"></div>
-         <div style="position: absolute; left: 20px; top: 410px;" class="text-large">You have:</div>
-         <div id="money" class="text-yellow"></div>
-         <div id="betdiv">
-           <span class="text-large">Your bet:</span>&nbsp; <input type="text" size="6" id="bet">
-         </div>
-       </td>
-     </tr>
-     <tr>
-       <td align="center">
-         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-         <input type="button" class="button" id="hitButton" value="Hit" onclick="hit()" disabled>
-         <input type="button" class="button" id="standButton" value="Stand" onclick="stand()" disabled>
-         <input type="button" class="button" id="newGameButton" value="New Game" onclick="startGame()">
-       </td>
-     </tr>
-     <tr>
-       <td align="center">
-         <span id="message">Welcome to Blackjack!<br>Click "New Game" to Begin.</span>
-       </td>
-     </tr>
-   </table>
- </body>
+    <body>
+        <h2>Dealer: <span id="dealer-sum"></span></h2>
+        <div id="dealer-cards">
+            <img id="hidden" src="./cards/BACK.png">
+        </div>
+
+        <h2>You: <span id="your-sum"></span></h2>
+        <div id="your-cards"></div>
+
+        <br>
+        <button id="hit">Hit</button>
+        <button id="stay">Stay</button>
+        <p id="results"></p>
+    </body>
+</html>
