--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         </div>
 
         <h2>You: <span id="your-sum"></span></h2>
-        <div id="your-cards"></div>
+        <div id="your-cards">
+        </div>
 
         <br>
         <button id="hit">Hit</button>
